--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maghraz-crm",
+  "name": "نرم-افزار-ارتباط-با-مشتری-مگراز",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "papaparse": "5.4.1"
+    "papaparse": "5.4.1",
+    "express": "^5.1.0",
+    "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
